# TrabalhoPDS-POO

./: .gitignore  CMakeLists.txt  Makefile_OLD.txt  README.md  campo.txt  config.sh  main  makefile
SDL-monolit/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
game_graphics/: soccerField.txt
include/: GoalKeeper.hpp  Paths.hpp  SoccerMatch.hpp  SoccerPlayer.hpp  SoccerPlayerAttributes.hpp  SoccerTeam.hpp  Utils.hpp  items.hpp  sdl2.hpp
src/: GoalKeeper.cpp  SDL2.cpp  SoccerMatch.cpp  SoccerPlayer.cpp  SoccerPlayerAttributes.cpp  SoccerTeam.cpp  Utils.cpp  main.cpp
tests/: test_main.cpp
